--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,5 @@ j2ee.server.domain=C:/servers1/glassfish-4.1.1/glassfish/domains/domain1
 j2ee.server.home=C:/servers1/glassfish-4.1.1/glassfish
 j2ee.server.instance=[C:\\servers1\\glassfish-4.1.1\\glassfish;C:\\servers1\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/servers1/glassfish-4.1.1
+selected.browser=Chrome
 user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
