--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\Asus\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv338881111.properties
+deploy.ant.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2rc\\config\\GlassFishEE6\\Properties\\gfv3-1798863369.properties
+file.reference.primefaces-8.0.jar=D:\\Users\\Usuario\\Desktop\\primefaces-8.0.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Asus/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
+j2ee.server.domain=C:/servers1/glassfish-4.1.1/glassfish/domains/domain1
+j2ee.server.home=C:/servers1/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\servers1\\glassfish-4.1.1\\glassfish;C:\\servers1\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/servers1/glassfish-4.1.1
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Asus\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
